syntax = "proto3";
option java_outer_classname = "ConstProto";

package proto;

//错误码
enum Result{
    SUCCESS = 0;
    SERVER_NULL = 1;//服务空
    TIME_OUT = 2;//回复超时
    SERVER_ERROR = 3;//服务错误
    TABLE_START = 4;//桌子已经开始
    TABLE_CONFIG_ERROR = 5;//桌子配置错误
    TABLE_NULL = 6;//桌子空
    TABLE_FULL = 7;//桌子满
    TABLE_ERROR = 8;//桌子异常
    ROLE_ERROR = 9;//玩家异常
    ROLE_NULL = 10;//玩家空
}

//room状态
enum TableState{
    WAITE = 0;//等待
    START = 1;//开始
}

//操作选择
enum Operation{
    PASS = 0;//过
    CALL = 1;//叫地主
    ROB = 2;//抢地主
    NOT_CALL = 3;//不叫地主
    NOT_ROB = 4;//不抢地主
    TIP = 5;//提示
    PLAY = 6;//出
}

//牌型
enum CardType{
    SINGLE = 0;//单
    DOUBLE = 1;//对子
    TRIPLE = 2;//三不带
    TRIPLE_ONE = 3;//三带一
    TRIPLE_DOUBLE = 4;//三带二
    PLANE_ONE = 5;//飞机带一
    PLANE_DOUBLE = 6;//飞机带二
    BOOM_DOUBLE_SINGLE = 7;//炸弹带二单
    BOOM_DOUBLE_CUP = 8;//炸弹带二对
    STRAIGHT = 9;//顺子
    STRAIGHT_DOUBLE = 10;//连对子
    BOOM = 11;//炸弹
    BOOM_MAX = 12;//双王炸
}